Se agrega Dota 2 GIF

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Este es un sitio web con GitHub pages</h1>
     <p>fue creado con ayuda de platzi</p>
+    <p><img src="https://media0.giphy.com/media/eHKM1zH4JBMk/200.webp?cid=ecf05e47u52oy161w1wz4cjitma7tec8sl2aqwjtfg7yujv3&rid=200.webp&ct=g" alt=""></p>
 </body>
 </html>
